k8s/infrastructure/network/gateway/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
  labels:
    app.kubernetes.io/part-of: infrastructure
    dev.pc-tips: network
