k8s/infrastructure/network/gateway/gw-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 10.25.150.222
  listeners:
    - protocol: HTTPS
      port: 443
      name: https-gateway
      hostname: "*.pc-tips.se"
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-pc-tips
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-domain-gateway
      hostname: pc-tips.se
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-pc-tips
      allowedRoutes:
        namespaces:
          from: All
